--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ plugins {
 }
 
 android {
+    viewBinding {
+        enabled = true
+    }
+
     compileSdk 31
 
     defaultConfig {
@@ -34,8 +38,10 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation "androidx.preference:preference-ktx:1.1.1"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
