--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation("androidx.room:room-ktx:$roomVersion")
     //Floating Action Buttom
     implementation 'com.github.clans:fab:1.6.4'
+    //ZXing
+    implementation 'com.google.zxing:core:3.3.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
 
     testImplementation 'junit:junit:4.+'
 
