--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,10 @@ dependencies {
     //Floating Action Buttom
     implementation 'com.github.clans:fab:1.6.4'
 
+    //Navigation Bar
+    implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
+    implementation  'com.etebarian:meow-bottom-navigation-java:1.2.0'
+
     testImplementation 'junit:junit:4.+'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
