--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        dataBinding = true
+    }
 }
 
 dependencies {
@@ -58,6 +61,8 @@ dependencies {
     implementation("androidx.room:room-ktx:$roomVersion")
     //Floating Action Buttom
     implementation 'com.github.clans:fab:1.6.4'
+    //Curved Navigation Bottom
+    implementation 'com.github.bliveinhack:MeowBottomNavigation:1.4.8'
 
     testImplementation 'junit:junit:4.+'
 
